--- a/service/article/build.gradle
+++ b/service/article/build.gradle
@@ -5,4 +5,6 @@ dependencies {
     implementation project(':common:snowflake')
     implementation project(':common:outbox-message-relay')
     implementation project(':common:event')
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
